fix spacing nav lists

--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ nav {
     align-items: center;
     gap: 20px;
     padding: 0 1em;
+
     a.logo {
       display: flex;
       justify-content: center;
@@ -41,7 +42,7 @@ nav {
     .navigation {
       ul {
         display: flex;
-        gap: 50px;
+        gap: 40px;
 
         padding-inline-start: 0;
 
